--- a/slides/05_advanced_data_import.Rmd
+++ b/slides/05_advanced_data_import.Rmd
@@ -125,19 +125,13 @@ protein_struc <- read_table(file)
 
 ```
 
---
-
-`r emo::ji("clapper")` Examine the result:
-```{r eval=FALSE}
-glimpse(protein_struc)
-```
-
 ---
 # Locally stored text files
 
 ## Exercise 1
 
-```{r echo=FALSE}
+`r emo::ji("clapper")` Examine the result:
+```{r}
 glimpse(protein_struc)
 ```
 
@@ -150,12 +144,15 @@ All the variables have been read into one column.
 # Locally stored text files
 
 ## Exercise 1
-`r emo::ji("clapper")` Look up `read_table()` and work out how to read the three variables in to three columns.
+`r emo::ji("clapper")` Look up `read_table()`, Can you work out how to read the three variables in to three columns?
 ```{r echo = FALSE}
 protein_struc <- read_table2(file)
 
 ```
 
+.footnote[
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out.......
+]
 --
 
 A function that can save you having to open a text file to look or wait along time to discover an import failure is `readLines()`:
@@ -201,6 +198,9 @@ file <- "raw_data/Icd10Code.csv"
 icd <- read_table2(file)
 ```
 
+.footnote[
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out.......
+]
 ---
 # Locally stored text files
 
@@ -222,19 +222,21 @@ It is not uncommon for people to use file extensions that are misleading so don'
 
 ## Overview
 
+File in some special format:
+
 * Cannot usually be opened in notepad.  
 
 --
 
-* Often specific to proprietary software, e.g., SPSS, STATA, Matlab.  
+* Are often specific to proprietary software, e.g., SPSS, STATA, Matlab.  
 
 --
 
-* If you have that software you may be able to export in plain text format.  
+If you have that software you may be able to export in plain text format.  
 
 --
 
-* But usually there is a package or function that allows you to script the steps. Favourites of mine are:  
+But usually there is a package or function that allows you to script the steps. Favourites of mine are:  
   * `haven` `r Cite(myBib, "haven")` for importing and exporting SPSS, STATA and SAS files  
   * `readxl` `r Cite(myBib, "readxl")` for excel files  
 
@@ -307,6 +309,9 @@ periwinkle <- periwinkle %>%
 write.table(periwinkle, "processed_data/periwinkle.txt")
 ```
 
+.footnote[
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  If you have worked that out.......
+]
 --
 
 `r emo::ji("eyes")` There are `read_dta()` and `read_sas()` functions for STATA and SAS files respectively.
@@ -319,7 +324,31 @@ We often have multiple files of the same format to import. Rather than coping an
 
 --
 
+## Two methods
+
+I will demonstrate two ways you can import multiple files.
+--
+
+1. Using a `for` loop in base R
+   * create a list with a length equal to the number of files.  
+   * use a `for` loop to iterate through each filename, reading it in to a dataframe which occupies a place in the list  
+   * combine the list of dataframes into a single dataframe using `rbind()`.  
+--
+
+2. Using `purrr` from the `tidyverse`
+   * use `map()` to apply an import function to each element of a vector  
+   * pipe the output into `bind_rows()` to combine the list of dataframes into a single dataframe.  
+
+
+---
+# Reading multiple files
+
+## The data
 [specdata.zip](specdata.zip) is a compressed folder csv files containing air quality measures taken from twenty locations. The files all have the same structure of four columns: "Date","sulfate","nitrate" and "ID". "ID" gives the location ID and is the same as in the file name.
+
+--
+
+`r emo::ji("eyes")` Both methods require us to download the data and create a vector of file names.
 
 --
 
@@ -329,16 +358,32 @@ We often have multiple files of the same format to import. Rather than coping an
 unzip("specdata.zip")
 ```
 
+--
+
+Examine the results in the Files pane
+
+---
+# Reading multiple files
+
+
+`r emo::ji("clapper")` Create a vector of file names:
+```{r}
+files <- dir("specdata/", pattern = ".csv", full.names = TRUE)
+```
+
+--
+
+`dir()` returns a character vector containing the names of the files in the specified directory which match a regex pattern (".csv" in this case).
+
+--
+
+`full.names = TRUE` means the directory path is prepended to the file names to give a relative file path
+
 ---
 # Reading multiple files
 
 ## Using a for loop in base R
 
-`r emo::ji("clapper")` Create a vector of file names:
-```{r}
-files <- dir("specdata/", pattern = "\\.csv$", full.names = TRUE)
-```
---
 
 `r emo::ji("clapper")` Pre-allocate a list with a length equal to the number of files.
 
@@ -346,27 +391,41 @@ files <- dir("specdata/", pattern = "\\.csv$", full.names = TRUE)
 df_list <- vector("list", length(files))
 ```
 
-# Reading multiple files
+--
 
-## Using a for loop in base R
-
-`r emo::ji("clapper")` Iterate through each filename in `files` reading it with read_csv and assigning it to a palce in the list:
+`r emo::ji("clapper")` Iterate through each filename in `files` reading it with read_csv and assigning it to a place in the list:
 ```{r}
 for (i in 1:length(files)) {
   df_list[[i]] <- read.csv(files[[i]])
 }
 ```
 
---
+---
+# Reading multiple files
+
+## Using a for loop in base R
+
 `r emo::ji("clapper")` To combine the list of data frames into a single data frame we can use:
 ```{r}
 airquality <- do.call(rbind, df_list)
 ```
+
+--
+
+`do.call()` applies `rbind()` to all the dataframes in the list.
+
+--
+
+`r emo::ji("happy")` You now have a dataframe containing all the data in the twenty files.
+
 ---
 # Reading multiple files
 
 ## Using `purrr` from the tidyverse
 
+The two main differences in this method are that `map()` dispenses with the need for a `for` loop (and for a pre-allocated vector) and we can use the pipe to link operations.
+
+--
 
 ```{r}
 airquality2 <- files %>% 
@@ -374,6 +433,8 @@ airquality2 <- files %>%
   bind_rows()
 ```
 
+--
+I replaced the base R functions `read.csv` and `do.call(rbind())` with tidyverse functions in addition.
 
 ---
 # Files on the internet
@@ -391,10 +452,13 @@ We simply use the URL rather than the local file path. Your options for import f
 For example, these data are from a buoy (buoy #44025) off the coast of New Jersey at
 http://www.ndbc.noaa.gov/view_text_file.php?filename=44025h2011.txt.gz&dir=data/historical/stdmet/
 
---
+---
+# Files on the internet
+
+## Example
 
 `r emo::ji("clapper")` Use `readLines()` to examine the data format.
-```{r include=FALSE}
+```{r}
 file <- "http://www.ndbc.noaa.gov/view_text_file.php?filename=44025h2011.txt.gz&dir=data/historical/stdmet/"
 
 # use readLines() data format: 
@@ -408,15 +472,16 @@ The first line gives the column name, the second line gives units and the data t
 ---
 # Files on the internet
 
+## Example
 `r emo::ji("clapper")` Read in the data.
-```{r echo=FALSE}
+```{r}
 buoy44025 <- read_table(file, col_names = FALSE, skip = 2)
 
 ```
 
 --
 
-`r emo::ji("clapper")` Use `scan()` to read in the appropriate lines then [tidy](experience_data_tidying.html) the results and name the columns measure_units, for example
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)` Use `scan()` to read in the appropriate lines then [tidy](04_tidying_data_and_the_tidyverse.html) the results and name the columns measure_units, for example
 ```{r echo=FALSE}
 # read in the variable names from the first line, removing the hash
 measure <- scan(file, nlines = 1, what = character()) %>%
@@ -521,17 +586,12 @@ test <- read_html(url) %>%
 
 --
 
-`r emo::ji("clapper")` Use methods given in [Tidying data and the tidyverse including the pipe]("experience_data_tidying.html") to process the contents of the dataframe.
+`r kableExtra::text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  Use methods given in [Tidying data and the tidyverse including the pipe](04_tidying_data_and_the_tidyverse.html) to process the contents of the dataframe.
+
 ```{r echo=FALSE}
 
 ```
 
----
-
-
-
---
-## readxl sheets
 
 ---
 # APIs
@@ -583,7 +643,7 @@ This is a example of how to connect to an API to get data when the API doesn't h
 
 ## Terminology
 
-Interaction with an API comprises a request (what you send) and a response.  
+Interaction with an API comprises a **request** (what you send) and a **response**.  
 
 --
 
@@ -600,7 +660,7 @@ In R `httr` is one package that allows you create requests
 ---
 # APIs
 
-## Terminology
+## Terminology: Requests
 
 An API requests consists of:
   
@@ -609,7 +669,7 @@ An API requests consists of:
 
 --
 
-* an 'endpoint' following by a `?`. An endpoint is a dataset provided by the API.  
+* an 'endpoint' followed by a `?`. An endpoint is a dataset provided by the API.  
   http://gtr.rcuk.ac.uk/search/`r kableExtra::text_spec("project", background = "#D0DEE6")`?term=virus&page=1&fetchSize=100
 
 --
@@ -621,12 +681,24 @@ An API requests consists of:
 * Endpoints are queried with 'parameters' separtated by `&` which are defined in the API documentation  
   http://gtr.rcuk.ac.uk/search/project?`r kableExtra::text_spec("term=virus&page=1&fetchSize=100", background = "#D0DEE6")`
 
+---
+# APIs
+
+## Terminology: Responses
+
+An API response is usually returned in either:
+
+1. JavaScript Object Notification (JSON) 
+
 --
 
-JavaScript Object Notification (JSON) and Extensible Markup Language (XML) are the most common answer formats.
+2. Extensible Markup Language (XML) are the most common answer formats.
+
+--
+
+These formats are plain text but need processing. 
 
 JSON data is often handled with the `jsonlite` package
-
 
 ---
 # APIs
@@ -654,10 +726,16 @@ library(httr)
 library(jsonlite)
 ```
 
---
+---
+# APIs
+
+## Example
 
 We need to:  
 1. Make a "GET" request to the API to pull raw data into R  
+
+--
+
 2. Parse that data from its raw form (JSON) into a usable format
 
 ---
@@ -677,12 +755,13 @@ term <- "virus"
 
 --
 
-We are searching the `project` data resource; other possible endpoints include person and publication.
+We are searching the `project` data resource; other possible endpoints include `person` and `publication`.
 
-`fetchSize` and `page` give the number of results per page returned and which page should be returned. Typically, we need to write a loop to retrieve all the results. 
+`fetchSize` and `page` give the number of results per page returned and which page should be returned. 
 
 --
 
+Typically, we need to write a loop to retrieve all the results. 
 For simplicity, I have used a search that returns less that a one page of results.
 
 ---
@@ -690,11 +769,71 @@ For simplicity, I have used a search that returns less that a one page of result
 
 ## Constructing the query
 
-Specifying the funding council, type of grant and year is by passing id codes to the `selectedFacets` parameter. 
+Specifying the funding council, type of grant and year is done by passing **id codes** to the `selectedFacets` parameter. 
 
 --
 
-The id codes are obtained from the documentation or by running a simple query and examining the resulting object.
+This is information obtained from the API documentation.
+
+--
+
+But you can often examine the response to an exploratory request to obtain such information
+
+---
+# APIs
+
+## Constructing the query
+
+### An exploratory query to determine additional search parameters
+
+`r emo::ji("clapper")` Construct the query:
+
+```{r}
+explore <- paste(base,endpoint, "?",
+               "term=", term, "&",
+               "page=", page, "&",
+               "fetchSize=", fetchsize,
+               sep = "")
+explore
+```
+---
+# APIs
+
+## Constructing the query
+
+### An exploratory query to determine additional search parameters
+
+`r emo::ji("clapper")` Make the request using the query:
+```{r}
+# httr::GET makes the request
+results <- GET(explore)
+```
+
+`r emo::ji("clapper")` Process the JSON response into an R data structure:
+```{r}
+# httr::GET makes the request
+data <- results %>%
+  content("text") %>%
+  fromJSON()
+```
+
+---
+# APIs
+
+## Constructing the query
+
+### An exploratory query to determine additional search parameters
+
+---
+# APIs
+
+## Constructing the query
+
+`r emo::ji("clapper")` Examine the `data` list.
+
+--
+
+Having worked out what the id codes are for research grants, the BBSRC and 2020 we will want to add those to our query.
 
 --
 
@@ -711,13 +850,15 @@ y2020 <- "c3RhcnR8MTU3NzgzNjgwMDAwMF8xNjA5NDU5MTk5MDU5fHJhbmdl"
 ```
 
 ---
-# APIs TO BE COMPLETED
+# APIs
 
 ## Constructing the query
 
+The id codes include some special characters that must be encoded as `%` plus a two-digit hexadecimal representation (known as percent coding). 
 
- *Incomplete!*
-The id code include some special characters that encoded as % plus a two-digit hexadecimal representation (known as percent coding). You may have seen browsers replace spaces with `%20` - this one example. 
+--
+
+You may have seen browsers replace spaces with `%20` - this is just one example. 
 
 --
 
@@ -741,14 +882,14 @@ selectedFacets <- URLencode(paste(research,
 
 `r emo::ji("clapper")` Paste all parts into the same query, adding `?` and `&` where required:
 ```{r}
-call1 <- paste(base,endpoint,"?",
-               "term=", term,"&",
-               "page=", page,"&",
-               "fetchSize=", fetchsize,"&",
+call1 <- paste(base, endpoint,"?",
+               "term=", term, "&",
+               "page=", page, "&",
+               "fetchSize=", fetchsize, "&",
                "selectedFacets=", selectedFacets,
                sep="")
 ```
-
+https://gtr.ukri.org/search/project?term=virus&fetchSize=25&selectedSortableField=&selectedSortOrder=&fields=&type=&selectedFacets=Y2F0fFJlc2VhcmNoIEdyYW50fHN0cmluZw%3D%3D%2CZnVuZGVyfEJCU1JDfHN0cmluZw%3D%3D%2Cc3RhcnR8MTU3NzgzNjgwMDAwMF8xNjA5NDU5MTk5MDU5fHJhbmdl
 --
 
 
@@ -762,35 +903,43 @@ call1
 # APIs
 
 ## Running the query
+
+`r emo::ji("clapper")` We use the GET function in the same way as for our exploratory query:
 ```{r}
 # httr::GET makes the request
 results <- GET(call1)
 ```
 
-check the request was successful
+--
+
+`r emo::ji("clapper")` We can check the request was successful using:
 
 ```{r}
 results$status_code
 ```
 
+--
+
+`r emo::ji("clapper")` Extract the content of the response and parse it from JSON to an R structure.
+
 ```{r}
-data <- results %>% content("text") %>% fromJSON()
+data <- results %>% 
+  content("text") %>%
+  fromJSON()
 ```
 
 ---
 # APIs
 
+`r emo::ji("clapper")` Examine your results:
 ```{r}
 data$searchResult$resourceHitCount
-
 ```
 
-not covered: authentication. done in the get
-Making a get request
-typically you need an API password, an API username or both
+---
+# Summary
 
 
-## packages
 
 
 ---
